# hocon-rs

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: fuzz.yml  release.yml  rust.yml
benches/: parser_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: from_slice.rs  from_str.rs  parse_str.rs
resources/: add_assign_expected.json  base.conf  base.json  concat2.json  concat5.json  demo.conf  include.json  included.conf  object1.conf  object2.conf  object3.conf  object7.conf  self_referential.json
src/: config.rs  config_builder.rs  config_options.rs  error.rs  extension.rs  factory.rs  index.rs  key.rs  lib.rs  macros.rs  merge.rs  object.rs  parser.rs  path.rs  raw.rs  syntax.rs  transform.rs  value.rs
src/merge/: add_assign.rs  array.rs  concat.rs  delay_merge.rs  delay_replacement.rs  inclusion.rs  memo.rs  object.rs  path.rs  substitution.rs  value.rs  vlaue.rs
src/parser/: arena_input.rs  array.rs  boolean.rs  comment.rs  config_parse_options.rs  demo.rs  error.rs  float.rs  frame.rs  include.rs  int.rs  loader.rs  mod.rs  null.rs  number.rs  object.rs  parser.rs  read.rs  string.rs  substitution.rs
src/parser/pure/: array.rs  comment.rs  include.rs  mod.rs  number.rs  object.rs  parser.rs  read.rs  string.rs  substitution.rs
src/raw/: add_assign.rs  comment.rs  concat.rs  extension.rs  field.rs  include.rs  macros.rs  mod.rs  raw_array.rs  raw_object.rs  raw_string.rs  raw_value.rs  substitution.rs
src/serde/: de.rs  ser.rs
test_conf/: comment.conf  concat3.json  deserialize.json  included.conf  main.conf  object1.conf
test_conf/base/: add_assign.conf  add_assign.json  base.conf  base.json  base2.conf  base2.json  concatenation.conf  concatenation.json  empty2.conf  escape.conf  escape.json  paths_as_keys.conf  paths_as_keys.json  unicode.conf  unicode.json
test_conf/comprehensive/: base.json  comment.json  concat.json  demo.conf  main.conf  substitution.json  substitution3.json
test_conf/error/: error_separator.conf  error_separator2.conf  invalid_add_assign.conf  invalid_add_assign2.conf  invalid_array_value.conf  invalid_array_value2.conf  invalid_array_value3.conf  invalid_concatenation.conf  invalid_concatenation10.conf  invalid_concatenation2.conf  invalid_concatenation3.conf  invalid_concatenation4.conf  invalid_concatenation5.conf  invalid_concatenation6.conf  invalid_concatenation7.conf  invalid_concatenation8.conf  invalid_concatenation9.conf  invalid_object_entry.conf  invalid_object_entry2.conf  invalid_root5.conf  invalid_root6.conf  invalid_separator3.conf  invalid_substitution.conf  invalid_substitution2.conf  invalid_substitution3.conf  invalid_substitution4.conf  invalid_substitution5.conf  missing_curly_braces.conf  missing_curly_braces2.conf  missing_key.conf  missing_square_brackets.conf  missing_square_brackets2.conf  missing_value2.conf  missing_value3.conf
