[package]
name = "hocon-rs"
version = "0.1.0"
edition = "2024"
authors = ["mikai233 <dreamfever2017@yahoo.com>"]
description = "Rust implementation of HOCON"
repository = "https://github.com/mikai233/hocon-rs"
homepage = "https://github.com/mikai233/hocon-rs"
keywords = ["hocon", "configuration"]
license = "MIT"
readme = "README.md"

[dependencies]
encoding_rs = "0.8.35"
memchr = "2.7.5"
ahash = "0.8.12"
thiserror = "2.0.12"
serde = { version = "1.0.219" }
serde_json = { version = "1.0.142" }
reqwest = { version = "0.12.22", optional = true, default-features = false, features = [
    "blocking",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
url = "2.5.7"
java-properties = "2.0.0"
derive_more = { version = "2.0.1", features = [
    "deref",
    "deref_mut",
    "constructor",
] }
tracing = "0.1.41"
num-bigint = "0.4.6"
bigdecimal = "0.4.8"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
ctor = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
rstest = "0.26.1"
criterion = "0.7.0"

[[bench]]
name = "parser_bench"
harness = false

[features]
urls_includes = ["dep:reqwest"]
json_arbitrary_precision = ["serde_json/arbitrary_precision"]