[package]
name = "hocon-rs"
version = "0.1.2"
edition = "2024"
authors = ["mikai233 <dreamfever2017@yahoo.com>"]
description = "Rust implementation of HOCON"
repository = "https://github.com/mikai233/hocon-rs"
homepage = "https://github.com/mikai233/hocon-rs"
documentation = "https://docs.rs/hocon-rs"
keywords = ["hocon", "configuration"]
license = "MIT"
readme = "README.md"

[workspace]
members = ["fuzz"]

[dependencies]
memchr = "2.7.6"
thiserror = "2.0.17"
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }
reqwest = { version = "0.12.22", optional = true, default-features = false, features = [
    "blocking",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
url = "2.5.7"
java-properties = "2.0.0"
derive_more = { version = "2.0.1", features = [
    "deref",
    "deref_mut",
    "constructor",
] }
tracing = "0.1.41"
num-bigint = "0.4.6"
bigdecimal = "0.4.8"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
ctor = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
rstest = "0.26.1"
criterion = "0.7.0"

[[bench]]
name = "parser_bench"
harness = false

[features]
urls_includes = ["dep:reqwest"]
json_arbitrary_precision = ["serde_json/arbitrary_precision"]
