[package]
name = "hocon-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.hocon-rs]
path = ".."
features = ["urls_includes"]

[[bin]]
name = "from_str"
path = "fuzz_targets/from_str.rs"
test = false
doc = false
bench = false

[[bin]]
name = "from_slice"
path = "fuzz_targets/from_slice.rs"
test = false
doc = false
bench = false
